# LCM4ESP32

./: .gitignore  CMakeLists.txt  Changelog.md  README.md  bootloader-crash.txt  deploy.md  partitions.csv  sdkconfig  sdkconfig.defaults  x-32partitions.csv  x-c2partitions.csv  x-c2sdkconfig  x-c3partitions.csv  x-c3sdkconfig  x-s2partitions.csv  x-s2sdkconfig  x-s3partitions.csv  x-s3sdkconfig
bootloader_components/lcm_bootloader_support/: CMakeLists.txt
bootloader_components/lcm_bootloader_support/include_bootloader/: lcm_bootloader_utility.h
bootloader_components/lcm_bootloader_support/src/: lcm_bootloader_utility.c
bootloader_components/main/: CMakeLists.txt  bootloader_start.c
main/: CMakeLists.txt  Kconfig.projbuild  certs.h  connect.c  connect.h  deploy.md  index.html.h  main.c  ota.c  ota.h  udplogger.c  udplogger.h  wifi_config.c
